- Use Breasts is no longer usable while mounted facing chest/behind/in other weird situations.
- Tighten can no longer be used when the opponent has a strapon
- Fixed a bug where ineffective panties would still obstruct reverse fucking
- Fixed a bug where drain kiss and upgraded kiss texts were switched.
 
Balance changes:
- Strip top and Strip bottom now only gives a pseudo 20 cunning bonus when in a dominant position (rather than 50)
- Level Drain now can only drain 1 level maximum
- Level Drain now can only be used when the user's level does not exceed 100 and is lower than the opponent's level
- Romantic now gives +5% mojo built for kiss as well as increasing pleasure damage by 3. At 20 seduction, pleasure bonus becomes 10.
- Dexterous now gives +40% hand and feet pleasure damage as well as being able to finger/handjob with underwear on.
- Pimphand now gives +40% hand pleasure damage as well as better slaps.
- Wrassler now also increases the opponent's pain tolerance by 50% as well.
- Experienced lover now decreases self damage from fucking by 33% instead of 25%
- Exhibitionist I find is good enough as is.
- Suckle now does more damage, but builds mojo for the opponent (5%, or 10% if lactating)
- Finger and handjob now does more pleasure damage.
- Everyone now starts with 40 willpower
- Knockdowns now causes the target to lose either 1/8th of their willpower, up to a maximum of 15
- Knockdown willpower loss is now affected by strongwilled.

New:
- Added the Trait Insertion Master (better name needed)
	- Increases base pleasure damage of fucking (but not thrusting/grinding/etc) by min(seduction / 4, 40)
	- Angel gets this trait at 24 and Reyka at 17
	- Players can get it after getting the Powerful hips trait

Other changes:
- Status panel now hides items that you have 0 of.
- Characters now have to be pleasured before they orgasm. Temptation damage is no longer sufficient
- lowered AI priority of stand up
- Changed how statuses's resource modifiers stacked