@@ -19,7 +19,7 @@ public class MutualUndress extends Skill {
 
 	@Override
 	public boolean usable(Combat c, Character target) {
-		if(getSelf().canAct()&&c.getStance().mobile(getSelf())&&!getSelf().nude()&&!target.nude()) {
+		if(getSelf().stripDifficulty(target) == 0 && getSelf().canAct()&&c.getStance().mobile(getSelf())&&!getSelf().nude()&&!target.nude()) {
 			return true;
 		}
 		return false;
