@@ -6,6 +6,7 @@ import nightgames.combat.Combat;
 import nightgames.combat.Result;
 import nightgames.global.Global;
 import nightgames.items.Item;
+import nightgames.status.Falling;
 import nightgames.status.Winded;
 
 public class StunBlast extends Skill {
@@ -40,6 +41,7 @@ public class StunBlast extends Skill {
 				c.write(getSelf(),receive(c,0,Result.normal, target));
 			}
 			target.getStamina().empty();
+			target.add(c, new Falling(target));
 			target.add(c, new Winded(target));
 		}
 		else{
